Add fabric and common(thread) projects

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,11 @@ mod_id = gimmicks
 minecraft_version = 1.19
 java_version = 17
 
+fabric_loader_version = 0.14.6
+fabric_api_version = 0.55.3+1.19
+
 modrinth_project_id = 4G7MHSxW
-curseforge_project_id =
+curseforge_project_id = 362421
 extra_game_versions =
 
-template.enabled_platforms = quilt
+template.enabled_platforms = fabric,quilt
