--- a/quilt/gradle.properties
+++ b/quilt/gradle.properties
@@ -1,7 +1,8 @@
 template.platform = quilt
+template.commonProject = thread
 template.producesReleaseArtifact = true
 #template.usesDataGen = true
 
 quilt_loader_version = 0.17.0
 qsl_version = 2.0.0-beta.3+1.19
-fabric_api_version = 2.0.0-alpha.2+0.55.3-1.19
+fabric_api_version = 2.0.0-alpha.3+0.55.3-1.19
